--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Mantis is react free admin template build using Vite" />
+    <meta name="description" content="Fitlink is a fitness-focused social media platform connecting gym enthusiasts, trainers, and fitness communities. Share workouts, track progress, and stay motivated!" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <title>FitLink-2024</title>
 
